--- a/.github/workflows/sync_to_hub.yaml
+++ b/.github/workflows/sync_to_hub.yaml
@@ -2,8 +2,6 @@ name: Sync to Hugging Face Hub
 on:
   push:
     branches: [main]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
@@ -18,5 +16,5 @@ jobs:
       - name: Push to hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
-        # REPLACE 'YOUR_HF_USERNAME' below with your actual username!
-        run: git push https://oauth2:$HF_TOKEN@huggingface.co/spaces/nim001/optimized-sentiment-service main
+        # Added --force flag here
+        run: git push --force https://oauth2:$HF_TOKEN@huggingface.co/spaces/nim001/optimized-sentiment-service main
